Attempting a fix on Safari z-index issue

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -132,6 +132,7 @@ h6 {
 	z-index: 997;
 	/* padding: 7px 0; */
 	box-shadow: 0px 0 18px rgba(55, 66, 59, 0.08);
+
 }
 
 #header .logo {
@@ -143,6 +144,8 @@ h6 {
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	font-family: "Poppins", sans-serif;
+	/* -webkit-transform: ; */
+	transform: translate3d(0, 0, 200px);
 }
 
 #header .logo a {
